--- a/product/存储与CDN/对象存储 4.0/购买指南/产品定价.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/产品定价.md
@@ -273,15 +273,19 @@
 </table>
 
 ### 资源包定价
-目前资源包统一指的是存储空间包，有标准存储空间包、归档存储空间包两种。定价如下：
+对象存储 COS 现针对中国大陆推出两种资源包：存储空间包和外网下行流量包。其中存储空间包有标准存储空间包、归档存储空间包两种可选。
 
->注意：
->- 存储空间包仅抵扣存储空间费用，不支持抵扣流量费用。
->- 流量包等其他资源包陆续推出中，敬请期待！
+>**注意：**
+>- 资源包定价仅适用于中国大陆地域。
+>- 存储空间包用于抵扣存储空间费用，外网下行流量包用于抵扣使用 COS 所产生的外网下行流量费用。
+>- 其他资源包陆续推出中，敬请期待。
+
+#### 存储空间包定价
 
 <table>
    <tr>
-      <th rowspan="2">类型</th>
+	    <th rowspan="2">适用地域</th>
+      <th rowspan="2">资源包类型</th>
       <th rowspan="2">规格</th>
       <th>购买 3 个月</th>
       <th>购买 6 个月</th>
@@ -293,6 +297,158 @@
       <th>售价（元）</th>
    </tr>
    <tr>
+	    <td rowspan="12">北京、天津、<br>上海、广州</td>
+      <td rowspan="6">标准存储<br>空间包</td>
+      <td>100GB</td>
+      <td>29 </td>
+      <td>55 </td>
+      <td>101 </td>
+   </tr>
+   <tr>
+      <td>200GB</td>
+      <td>58 </td>
+      <td>108 </td>
+      <td>200 </td>
+   </tr>
+   <tr>
+      <td>500GB</td>
+      <td>142 </td>
+      <td>265 </td>
+      <td>491</td>
+   </tr>
+   <tr>
+      <td>2TB</td>
+      <td>575 </td>
+      <td>1070 </td>
+      <td>1981 </td>
+   </tr>
+   <tr>
+      <td>10TB</td>
+      <td>2835 </td>
+      <td>5272 </td>
+      <td>9744 </td>
+   </tr>
+   <tr>
+      <td>50TB</td>
+      <td>13978 </td>
+      <td>25958 </td>
+      <td>47923 </td>
+   </tr>
+   <tr>
+      <td rowspan="6">归档存储<br>空间包</td>
+      <td>100GB</td>
+      <td>9 </td>
+      <td>18 </td>
+      <td>34 </td>
+   </tr>
+   <tr>
+      <td>200GB</td>
+      <td>19</td>
+      <td>35 </td>
+      <td>67 </td>
+   </tr>
+   <tr>
+      <td>500GB</td>
+      <td>46 </td>
+      <td>87</td>
+      <td>164 </td>
+   </tr>
+   <tr>
+      <td>2TB</td>
+      <td>187 </td>
+      <td>353</td>
+      <td>665 </td>
+   </tr>
+   <tr>
+      <td>10TB</td>
+      <td>923 </td>
+      <td>1744</td>
+      <td>3285 </td>
+   </tr>
+   <tr>
+      <td>50TB</td>
+      <td>4562 </td>
+      <td>8617 </td>
+      <td>16220 </td>
+   </tr>
+	 
+   <tr>
+	    <td rowspan="12">成都、重庆</td>
+      <td rowspan="6">标准存储<br>空间包</td>
+      <td>100GB</td>
+      <td>27 </td>
+      <td>50 </td>
+      <td>93 </td>
+   </tr>
+   <tr>
+      <td>200GB</td>
+      <td>53 </td>
+      <td>98 </td>
+      <td>182 </td>
+   </tr>
+   <tr>
+      <td>500GB</td>
+      <td>130 </td>
+      <td>242 </td>
+      <td>449</td>
+   </tr>
+   <tr>
+      <td>2TB</td>
+      <td>526 </td>
+      <td>978 </td>
+      <td>1810 </td>
+   </tr>
+   <tr>
+      <td>10TB</td>
+      <td>2591 </td>
+      <td>4817 </td>
+      <td>8905 </td>
+   </tr>
+   <tr>
+      <td>50TB</td>
+      <td>12773 </td>
+      <td>23722 </td>
+      <td>43794 </td>
+   </tr>
+   <tr>
+      <td rowspan="6">归档存储<br>空间包</td>
+      <td>100GB</td>
+      <td>9 </td>
+      <td>17 </td>
+      <td>32 </td>
+   </tr>
+   <tr>
+      <td>200GB</td>
+      <td>18</td>
+      <td>33 </td>
+      <td>63 </td>
+   </tr>
+   <tr>
+      <td>500GB</td>
+      <td>44 </td>
+      <td>82</td>
+      <td>154 </td>
+   </tr>
+   <tr>
+      <td>2TB</td>
+      <td>176 </td>
+      <td>333</td>
+      <td>624 </td>
+   </tr>
+   <tr>
+      <td>10TB</td>
+      <td>872 </td>
+      <td>1642</td>
+      <td>3082 </td>
+   </tr>
+   <tr>
+      <td>50TB</td>
+      <td>4308 </td>
+      <td>8110 </td>
+      <td>15206 </td>
+   </tr>
+   <tr>
+	    <td rowspan="12">大陆其他城市</td>
       <td rowspan="6">标准存储<br>空间包</td>
       <td>100GB</td>
       <td>38.22 </td>
@@ -368,5 +524,27 @@
    </tr>
 </table>
 
->**注意：**
->- 此价格表仅适用于中国大陆地域。
+#### 外网下行流量包定价
+
+<table>
+   <tr>
+	    <th rowspan="1">适用地域</th>
+      <th rowspan="1">资源包类型</th>
+      <th rowspan="1">规格</th>
+      <th>购买时长</th>
+      <th>售价（元）</th>
+   </tr>
+   <tr>
+	    <td rowspan="3">所有中国大陆地域</td>
+      <td rowspan="3">外网下行流量包</td>
+      <td>100GB</td>
+	   <td rowspan="3">3个月</td>
+      <td>43</td>
+   </tr>
+      <td>200GB</td>
+      <td>85</td>
+   <tr>
+      <td>500GB</td>
+      <td>213</td>
+   </tr>
+</table>
