--- a/product/存储与CDN/对象存储 4.0/SDK文档/iOS SDK/存储桶操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/iOS SDK/存储桶操作.md
@@ -142,7 +142,7 @@ request.bucket = @"examplebucket-1250000000";
 
 返回错误码（封装在返回的 error 里）主要包括两类：设备本身因为网络原因等返回的错误码，以及 COS 返回的错误码。
 
-- 对于设备本身因为网络原因产生的错误码，都是负数并且是四位数，例如-1001，这类错误码由苹果公司定于，请参见 Foundation 框架中的 NSURLError.h 头文件内的定义，或者是 [苹果官方文档说明](https://developer.apple.com/documentation/foundation/1508628-url_loading_system_error_codes)。
+- 对于设备本身因为网络原因产生的错误码，都是负数并且是四位数，例如-1001，这类错误码由苹果公司定义，请参见 Foundation 框架中的 NSURLError.h 头文件内的定义，或者是 [苹果官方文档说明](https://developer.apple.com/documentation/foundation/1508628-url_loading_system_error_codes)。
 - 对于COS返回的错误码，是基于 HTTP 的状态码而来的，也就是404，503这类。对于这类错误码，请参见 [错误码]( https://cloud.tencent.com/document/product/436/7730) 文档寻求解决方案。
 - 对于 SDK 自定义的错误码，均为5位数且都是正数，如10000、20000等。对于这类错误码，请参见 [SDK 错误码](https://cloud.tencent.com/document/product/436/30443) 文档寻求解决方案。
 
